Bookmarks' Layout Small Corrections (#155)
* Update index.css

* Update index.css

* Update index.css

* Correct overlap between 'Copy Link' and 'Bookmark' buttons

* Adjust 'Copy Link' and 'Bookmark' button position relative to the line below

* Add fixed width to both buttons

Add fixed width to buttons "Copy link" and "Bookmark" so we have the same behavior regarding width and possible overlapping of these buttons accross all browsers

+ refactoring

* Adjust button position

* Add link to SN1.1

* Typo MN8

--- a/index.css
+++ b/index.css
@@ -497,14 +497,6 @@ a:hover {
   background-color: #f5f4ef;
 }
 
-@media only screen and (max-width: 768px) {
-  /* CSS rules for screens smaller than 768px */
-  .comment-text {
-    width: 300px;
-    text-align: center;
-  }
-}
-
 /* Override for dark theme */
 .dark .comment-text {
   color: #FFFFFF;
@@ -657,7 +649,12 @@ a:hover {
   justify-content: right;
   align-items: center;
   flex-grow: 1;
-  gap: 1rem;  
+  gap: 1rem;
+  max-width: 30%;
+}
+
+.bookmark-buttons > * {
+    max-width: 60%;
 }
 
 .label-checkbox-container {
@@ -742,6 +739,21 @@ a:hover {
   font-size: 14px;
 }
 
+#copyButton, 
+bookmarkButton{
+  width: 76px;
+}
+
+@media only screen and (max-width: 768px) {
+  /* CSS rules for screens smaller than 768px */
+  .comment-text {
+    width: 300px;
+    text-align: center;
+  }
+  .bookmark-container p{
+    max-width: 60%;
+  }
+}
 @media only screen and (max-width: 600px) {
   #suttanav {
     padding: 5px; /* Reduced padding on smaller screens */
@@ -749,11 +761,13 @@ a:hover {
   }
   .bookmark-container {
     flex-wrap: wrap;
+    flex-direction: column-reverse;
   }
   .bookmark-container p{
     max-width: initial;
   }
   .bookmark-buttons{
     justify-content: space-evenly;
+    width: 100%;
   }
 }
